# uni_rust_serde_hw

./: Cargo.toml  request.json
src/: main.rs
