[package]
name = "serde_hw"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.33"
toml = "0.8.19"
humantime-serde = "1.1.1"
chrono = { version = "0.4.38", features = ["serde"] }
url = { version = "2.5.3", features = ["serde"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
